--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.10",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
